--- a/website code.html
+++ b/website code.html
@@ -135,13 +135,13 @@
         <li>Apple Pay - $50</li>
         <li>Cash - $50</li>
         <li>Cash App - $50</li>
-        <li>Crypto (any) - $50</li>
+        <li>Crypto (btc, eth, solana) - $50</li>
         <br>
         <li><strong>Weekly:</strong></li>
         <li>Apple Pay - $15</li>
         <li>Cash - $15</li>
         <li>Cash App - $15</li>
-        <li>Crypto (any) - $15</li>
+        <li>Crypto (btc, eth, solana) - $15</li>
       </ul>
     </div>
   </div>
