--- a/website code.html
+++ b/website code.html
@@ -110,6 +110,7 @@
 </head>
 <body>
 
+  <!-- Smoke -->
   <script>
     for (let i = 0; i < 12; i++) {
       const smoke = document.createElement('div');
@@ -133,25 +134,4 @@
       <ul>
         <li><strong>Life Time:</strong></li>
         <li>Apple Pay - $50</li>
-        <li>Cash - $50</li>
-        <li>Cash App - $50</li>
-        <li>Crypto (btc, eth, solana) - $50</li>
-        <br>
-        <li><strong>Weekly:</strong></li>
-        <li>Apple Pay - $15</li>
-        <li>Cash - $15</li>
-        <li>Cash App - $15</li>
-        <li>Crypto (btc, eth, solana) - $15</li>
-      </ul>
-    </div>
-  </div>
-
-  <script>
-    function togglePayment() {
-      const info = document.getElementById("paymentInfo");
-      info.style.display = info.style.display === "none" || info.style.display === "" ? "block" : "none";
-    }
-  </script>
-
-</body>
-</html>
+        <li>Cash - $50
