--- a/website code.html
+++ b/website code.html
@@ -148,7 +148,15 @@
         <li>Apple Pay - $50</li>
         <li>Cash - $50</li>
         <li>PayPal - $50</li>
-        <li>Crypto (BTC/ETH) - $45</li>
+        <li>Crypto (BTC/ETH) - $50</li>
+        
+        <li></li>
+        
+        <li><strong>Weekly:</strong></li>
+        <li>Apple Pay - $15</li>
+        <li>Cash - $15</li>
+        <li>PayPal - $15</li>
+        <li>Crypto (BTC/ETH) - $15</li>
       </ul>
     </div>
   </div>
