--- a/website code.html
+++ b/website code.html
@@ -78,18 +78,13 @@
       color: #00e0ff;
     }
 
-    .dropdown-section label {
-      display: block;
-      margin: 10px 0 5px;
+    .dropdown-section ul {
+      list-style: none;
+      padding: 0;
     }
 
-    .dropdown-section select {
-      width: 100%;
-      padding: 10px;
-      border-radius: 8px;
-      background-color: #333;
-      color: white;
-      border: none;
+    .dropdown-section li {
+      margin: 5px 0;
     }
 
     .price-display {
@@ -192,7 +187,6 @@
         <li>Cash app - $50</li>
         <li>PayPal - $50</li>
         <li>Crypto (BTC/ETH) - $50</li>
-
         <li><strong>Weekly:</strong></li>
         <li>Apple Pay - $15</li>
         <li>Cash app - $15</li>
