--- a/website code.html
+++ b/website code.html
@@ -175,7 +175,7 @@
     <h1>Vape Multi Tool</h1>
 
     <div class="button-container">
-      <button onclick="togglePayment()">Payment Methods</button>
+      <button onclick="togglePayment()">Payments</button>
       <button onclick="togglePurchase()">Purchase</button>
     </div>
 
