--- a/main.html
+++ b/main.html
@@ -81,17 +81,26 @@
     .dropdown-section ul {
       list-style: none;
       padding: 0;
+      border-top: 1px solid #444;
     }
 
     .dropdown-section li {
-      margin: 5px 0;
+      padding: 10px 0;
+      border-bottom: 1px solid #444;
     }
 
-    .price-display {
-      margin-top: 20px;
-      text-align: center;
-      font-size: 18px;
-      color: #0f0;
+    .dropdown-section label {
+      display: block;
+      margin: 10px 0 5px;
+    }
+
+    .dropdown-section select {
+      width: 100%;
+      padding: 10px;
+      border-radius: 8px;
+      background-color: #333;
+      color: white;
+      border: none;
     }
 
     .smoke {
@@ -156,14 +165,6 @@
       }
     }
 
-    function updatePrice() {
-      const duration = document.getElementById('duration').value;
-      let basePrice = duration === 'weekly' ? 15 : 50;
-      let tax = basePrice * 0.005;
-      let finalPrice = (basePrice + tax).toFixed(2);
-      document.getElementById('priceDisplay').innerText = `Total (incl. 0.5% tax): $${finalPrice}`;
-    }
-
     function confirmPurchase() {
       const payment = document.getElementById('paymentType').value;
       const duration = document.getElementById('duration').value;
@@ -175,7 +176,7 @@
     <h1>Vape Multi Tool</h1>
 
     <div class="button-container">
-      <button onclick="togglePayment()">Payments</button>
+      <button onclick="togglePayment()">Payment Methods</button>
       <button onclick="togglePurchase()">Purchase</button>
     </div>
 
@@ -199,21 +200,17 @@
       <h2>Select Your Purchase</h2>
 
       <label for="paymentType">Payment Method:</label>
-      <select id="paymentType" onchange="updatePrice()">
+      <select id="paymentType">
         <option value="Apple Pay">Apple Pay</option>
         <option value="Cash App">Cash app</option>
         <option value="Crypto">Crypto (BTC, Solana, ETH)</option>
       </select>
 
       <label for="duration">Subscription Type:</label>
-      <select id="duration" onchange="updatePrice()">
+      <select id="duration">
         <option value="weekly">Weekly - $15</option>
         <option value="lifetime">Lifetime - $50</option>
       </select>
-
-      <div class="price-display" id="priceDisplay">
-        Total (incl. 0.5% tax): $15.08
-      </div>
 
       <div style="text-align:center; margin-top: 20px;">
         <button onclick="confirmPurchase()">Confirm Purchase</button>
