--- a/main.html
+++ b/main.html
@@ -75,7 +75,7 @@
     .dropdown-section h2 {
       text-align: center;
       margin-bottom: 20px;
-      color: #00e0ff;
+      color: #b47bff;
     }
 
     .dropdown-section ul {
@@ -176,12 +176,12 @@
     <h1>Vape Multi Tool</h1>
 
     <div class="button-container">
-      <button onclick="togglePayment()">Payment Methods</button>
+      <button onclick="togglePayment()">Prices</button>
       <button onclick="togglePurchase()">Purchase</button>
     </div>
 
     <div class="dropdown-section" id="paymentInfo">
-      <h2>Payment Options</h2>
+      <h2>Prices</h2>
       <ul>
         <li><strong>Lifetime:</strong></li>
         <li>Apple Pay - $50</li>
