--- a/main.html
+++ b/main.html
@@ -103,6 +103,24 @@
       border: none;
     }
 
+    /* Styling for the 'Confirm Purchase' button */
+    .purchase-btn {
+      background-color: #333;
+      color: white;
+      padding: 15px 30px;
+      font-size: 18px;
+      border-radius: 10px;
+      border: none;
+      cursor: pointer;
+      transition: 0.3s;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+    }
+
+    .purchase-btn:hover {
+      background-color: #555;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+    }
+
     .smoke {
       position: absolute;
       width: 200px;
@@ -213,7 +231,8 @@
       </select>
 
       <div style="text-align:center; margin-top: 20px;">
-        <button onclick="confirmPurchase()">Confirm Purchase</button>
+        <!-- Darker "Confirm Purchase" button -->
+        <button class="purchase-btn" onclick="confirmPurchase()">Confirm Purchase</button>
       </div>
     </div>
   </div>
