--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Vape Multi Tool</title>
+  <title>Vape Multi-Tool</title>
   <style>
     * {
       box-sizing: border-box;
@@ -233,7 +233,7 @@
   </script>
 
   <div class="content">
-    <h1>Vape Multi Tool</h1>
+    <h1>Vape Multi-Tool</h1>
 
     <div class="button-container">
       <button onclick="togglePayment()">Prices</button>
