--- a/main.html
+++ b/main.html
@@ -15,41 +15,42 @@
       color: white;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       overflow-x: hidden;
-      min-height: 100vh; /* Ensure the body takes up the full viewport height */
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: space-between; /* Ensure content is spaced appropriately */
     }
 
+    /* Make the header sticky so it stays at the top */
     .content {
       position: relative;
       z-index: 2;
-      padding: 40px 20px 80px;  /* Reduced padding for a more compact layout */
-      max-width: 500px;  /* Narrowed down the content width */
+      padding: 40px 20px;
+      max-width: 500px;
       margin: auto;
+      flex-grow: 1; /* Ensures the content area grows to fill the available space */
     }
 
     h1 {
       text-align: center;
-      font-size: 36px;  /* Slightly reduced font size */
+      font-size: 36px;
       color: #e0e0e0;
       text-shadow: 0 0 20px #aaa;
     }
 
+    /* Buttons will be centered and displayed side by side */
     .button-container {
       display: flex;
       justify-content: center;
       gap: 15px;
       margin-top: 30px;
-      flex-direction: row; /* Make sure buttons are side by side */
     }
 
     .button-container button {
       background-color: #444;
       color: white;
       border: none;
-      padding: 12px 25px;  /* Reduced padding */
-      font-size: 16px;  /* Slightly smaller font size */
+      padding: 12px 25px;
+      font-size: 16px;
       border-radius: 10px;
       cursor: pointer;
       transition: 0.3s;
@@ -59,25 +60,26 @@
       background-color: #666;
     }
 
+    /* The price dropdown menu */
     .dropdown-section {
-      max-height: 0;
-      overflow: hidden;
+      max-height: 400px;  /* Set the max-height for scrollable area */
+      overflow-y: auto;   /* Allow vertical scrolling */
       transition: max-height 0.5s ease, padding 0.5s ease;
       background-color: #222;
       padding: 0 20px;
       margin-top: 10px;
       border-radius: 15px;
-      box-shadow: 0 0 20px rgba(255,255,255,0.1);
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
     }
 
     .dropdown-section.show {
       padding: 20px;
-      max-height: 400px; /* Adjusted max-height */
+      max-height: 400px; /* Ensure it stays at a specific height */
     }
 
     .dropdown-section h2 {
       text-align: center;
-      margin-bottom: 15px;  /* Reduced margin */
+      margin-bottom: 15px;
       color: #b47bff;
     }
 
@@ -87,7 +89,7 @@
     }
 
     .dropdown-section li {
-      padding: 8px 0; /* Reduced padding for list items */
+      padding: 8px 0;
       border-bottom: 1px solid #444;
     }
 
@@ -98,13 +100,14 @@
 
     .dropdown-section select {
       width: 100%;
-      padding: 8px;  /* Reduced padding */
+      padding: 8px;
       border-radius: 8px;
       background-color: #333;
       color: white;
       border: none;
     }
 
+    /* Purchase button */
     .purchase-btn {
       background-color: #333;
       color: white;
@@ -128,7 +131,7 @@
       height: 200px;
       background: radial-gradient(white, transparent);
       opacity: 0.05;
-      animation: drift 50s infinite ease-in-out; /* Slower animation */
+      animation: drift 50s infinite ease-in-out;
       border-radius: 50%;
       pointer-events: none;
       z-index: 0;
@@ -149,15 +152,16 @@
       }
     }
 
-    /* Prevent extra scroll space */
+    /* Ensure the page doesn't scroll too far */
     html, body {
       height: 100%;
       overflow-y: auto;
     }
 
-    /* Set content height based on the available space */
-    .content {
-      flex-grow: 1;
+    /* Footer section that will not scroll */
+    .footer {
+      text-align: center;
+      margin-top: 30px;
     }
 
   </style>
@@ -247,6 +251,10 @@
         <button class="purchase-btn" onclick="confirmPurchase()">Confirm Purchase</button>
       </div>
     </div>
+  </div>
+
+  <div class="footer">
+    <p>&copy; 2025 Vape Multi Tool</p>
   </div>
 </body>
 </html>
