--- a/main.html
+++ b/main.html
@@ -254,12 +254,12 @@
         <li><strong>Lifetime:</strong></li>
         <li>Apple Pay - $50</li>
         <li>Cash app - $50</li>
-        <li>PayPal - $50</li>
+        <li>Card - $50</li>
         <li>Crypto (BTC/ETH) - $50</li>
         <li><strong>Weekly:</strong></li>
         <li>Apple Pay - $15</li>
         <li>Cash app - $15</li>
-        <li>PayPal - $15</li>
+        <li>Card - $15</li>
         <li>Crypto (BTC/ETH) - $15</li>
       </ul>
     </div>
@@ -271,6 +271,7 @@
       <select id="paymentType">
         <option value="Apple Pay">Apple Pay</option>
         <option value="Cash App">Cash app</option>
+        <option value="Cash App">Card</option>
         <option value="Crypto">Crypto (BTC, Solana, ETH)</option>
       </select>
 
