--- a/main.html
+++ b/main.html
@@ -150,7 +150,7 @@
       }
     }
 
-    /* Custom scrollbar */
+    //scroll bar
     ::-webkit-scrollbar {
       width: 8px;
     }
@@ -174,7 +174,7 @@
       margin-top: 30px;
     }
 
-    /* Mobile responsive tweaks */
+    /*Mobile Change
     @media (max-width: 600px) {
       h1 {
         font-size: 28px;
@@ -288,7 +288,7 @@
   </div>
 
   <div class="footer">
-    <p>&copy; 2025 Vape Multi Tool</p>
+    <p>&copy; 2025 Vape Multi-Tool</p>
   </div>
 
 </body>
