--- a/main.html
+++ b/main.html
@@ -43,6 +43,7 @@
       justify-content: center;
       gap: 15px;
       margin-top: 30px;
+      flex-wrap: wrap;
     }
 
     .button-container button {
@@ -140,8 +141,8 @@
         transform: translate(-50%, 100vh) scale(0.8);
         opacity: 0.1;
       }
-      50% {
-        transform: translate(100vw, -50%) scale(1.2);
+      70% {
+        transform: translate(50vw, 0vh) scale(1);
         opacity: 0.05;
       }
       100% {
@@ -150,7 +151,6 @@
       }
     }
 
-    //scroll bar
     ::-webkit-scrollbar {
       width: 8px;
     }
@@ -174,7 +174,6 @@
       margin-top: 30px;
     }
 
-    /*Mobile Change
     @media (max-width: 600px) {
       h1 {
         font-size: 28px;
@@ -220,17 +219,37 @@
     function togglePayment() {
       const payment = document.getElementById('paymentInfo');
       const purchase = document.getElementById('purchaseMenu');
+      const features = document.getElementById('featuresMenu');
       const isShown = payment.classList.contains('show');
       payment.classList.toggle('show');
-      if (!isShown) purchase.classList.remove('show');
+      if (!isShown) {
+        purchase.classList.remove('show');
+        features.classList.remove('show');
+      }
     }
 
     function togglePurchase() {
       const purchase = document.getElementById('purchaseMenu');
       const payment = document.getElementById('paymentInfo');
+      const features = document.getElementById('featuresMenu');
       const isShown = purchase.classList.contains('show');
       purchase.classList.toggle('show');
-      if (!isShown) payment.classList.remove('show');
+      if (!isShown) {
+        payment.classList.remove('show');
+        features.classList.remove('show');
+      }
+    }
+
+    function toggleFeatures() {
+      const features = document.getElementById('featuresMenu');
+      const payment = document.getElementById('paymentInfo');
+      const purchase = document.getElementById('purchaseMenu');
+      const isShown = features.classList.contains('show');
+      features.classList.toggle('show');
+      if (!isShown) {
+        payment.classList.remove('show');
+        purchase.classList.remove('show');
+      }
     }
 
     function confirmPurchase() {
@@ -246,6 +265,7 @@
     <div class="button-container">
       <button onclick="togglePayment()">Prices</button>
       <button onclick="togglePurchase()">Purchase</button>
+      <button onclick="toggleFeatures()">Features</button>
     </div>
 
     <div class="dropdown-section" id="paymentInfo">
@@ -271,7 +291,7 @@
       <select id="paymentType">
         <option value="Apple Pay">Apple Pay</option>
         <option value="Cash App">Cash app</option>
-        <option value="Cash App">Card</option>
+        <option value="Card">Card</option>
         <option value="Crypto">Crypto (BTC, Solana, ETH)</option>
       </select>
 
@@ -284,6 +304,18 @@
       <div style="text-align:center; margin-top: 20px;">
         <button class="purchase-btn" onclick="confirmPurchase()">Confirm Purchase</button>
       </div>
+    </div>
+
+    <div class="dropdown-section" id="featuresMenu">
+      <h2>Tool Features</h2>
+      <ul>
+        <li>Undetectable Injection</li>
+        <li>Customizable Configs</li>
+        <li>Auto Updates</li>
+        <li>24/7 Support</li>
+        <li>Multi-Platform Compatible</li>
+        <li>Low System Impact</li>
+      </ul>
     </div>
   </div>
 
