--- a/main.html
+++ b/main.html
@@ -331,12 +331,12 @@
     <div class="dropdown-section" id="featuresMenu">
       <h2>Tool Features</h2>
       <ul>
-        <li>Undetectable Injection</li>
-        <li>Customizable Configs</li>
-        <li>Auto Updates</li>
-        <li>24/7 Support</li>
-        <li>Multi-Platform Compatible</li>
-        <li>Low System Impact</li>
+        <li>DDos</li>
+        <li>IP To Location</li>
+        <li>IP Grab</li>
+        <li>Port Grab</li>
+        <li>Discord Webhook Raid</li>
+        <li>More In The Future!</li>
       </ul>
     </div>
   </div>
